src/content/docs/sdk/unity/v5/features/events.mdx
---
title: Send event information
description: Use these methods send event information to Adjust.
slug: en/sdk/unity/features/events
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/unity/v4/features/events
---

The Adjust SDK provides an `AdjustEvent` object which can be used to structure and send event information from your app to Adjust's servers.

## Instantiate an AdjustEvent object {#instantiate-an-adjustevent-object}

<CodeBlock title="Method signature">

```cs
public AdjustEvent(string eventToken)
```

</CodeBlock>

To send event information with the Adjust SDK, you need to instantiate an `AdjustEvent` object. This object contains variables that are sent to Adjust when an event occurs in your app.

To instantiate an event object, create a new `AdjustEvent` instance and pass the following parameters:

-  `eventToken` (`string`): Your Adjust [event token](https://help.adjust.com/en/article/add-events#manage-your-events).

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

## Send an event {#send-an-event}

<CodeBlock title="Method signature">

```cs
public static void TrackEvent(AdjustEvent adjustEvent);
```

</CodeBlock>

You can associate your [Adjust event tokens](https://help.adjust.com/en/article/add-events#add-event) to actions in your app to record them. To record an event:

-  Create a new Adjust event instance and pass your event token as a string argument.
-  Call the `Adust.TrackEvent` method with your event instance as an argument.

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

### Example {#example}

This example shows how to record an event with the token `g3mfiw`.

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" collapse="6-46">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  android_uuid     781f17d5-5048-4fae-a4e5-77b58bab62b9
  api_level        34
  app_token        2fm9gkqubvpc
  app_version      1.0
  attribution_deeplink 1
  callback_params  {"key":"value","foo":"bar"}
  connectivity_type 1
  country          US
  cpu_type         arm64-v8a
  created_at       2024-01-25T14:13:16.151Z+0100
  currency         EUR
  device_manufacturer Google
  device_name      sdk_gphone64_arm64
  device_type      phone
  display_height   2205
  display_width    1080
  environment      sandbox
  event_buffering_enabled 0
  event_count      3
  event_token      g3mfiw
  gps_adid         5962dfc1-3a53-4692-850b-22c4bf4311a5
  gps_adid_attempt 2
  gps_adid_src     service
  hardware_name    UE1A.230829.036
  language         en
  mcc              310
  mnc              260
  needs_response_details 1
  os_build         UE1A.230829.036
  os_name          android
  os_version       14
  package_name     com.adjust.examples
  partner_params   {"key":"value","foo":"bar"}
  revenue          0.25
  screen_density   high
  screen_format    long
  screen_size      normal
  session_count    2
  session_length   23
  subsession_count 1
  time_spent       23
  tracking_enabled 1
  ui_mode          1

```

</CodeBlock>

## Record event revenue {#record-event-revenue}

<CodeBlock title="Method signature">

```cs
public void SetRevenue(double amount, string currency);
```

</CodeBlock>

You can record revenue associated with an event by setting the revenue and currency properties on your event instance. Use this feature to record revenue-generating actions in your app.

To set these properties, call the `SetRevenue` method of your `AdjustEvent` instance and pass the following arguments:

-  `amount` (`double`): The amount of revenue generated by the event
-  `currency` (`string`): The [ISO 4217 code](https://www.iban.com/currency-codes) of the event currency.

<Callout type="seealso">

Check the guide to [recording purchases in different currencies](https://help.adjust.com/en/article/currency-conversion) for more information.

</Callout>

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.SetRevenue(0.01, "EUR");
//...
Adjust.TrackEvent(adjustEvent);
```

### Example {#example-1}

This example shows how to record an event with the token `g3mfiw`. The function sets the `revenue` property of this event to _`0.25`_ and the `currency` property to _`EUR`_.

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.SetRevenue(0.25, "EUR");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" highlight="{range: 7-8}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  revenue          0.25
  currency         EUR
```

</CodeBlock>

## Event deduplication {#event-deduplication}

<CodeBlock title="Property declaration">

```cs
public string DeduplicationId { get; set; }
```

</CodeBlock>

You can pass an optional identifier to avoid recording duplicate events. The SDK stores the last ten identifiers and skips revenue events with duplicate transaction IDs.

To set the identifier, set the `DeduplicationId` property of your `AdjustEvent` instance to your transaction ID.

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.DeduplicationId = "deduplicationId";
//...
Adjust.TrackEvent(adjustEvent);
```

### Example {#example-2}

This example shows how to record an event with the token `g3mfiw`. The function sets the `DeduplicationId` property to `5e85484b-1ebc-4141-aab7-25b869e54c49`.

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string deduplicationId = "5e85484b-1ebc-4141-aab7-25b869e54c49"
adjustEvent.DeduplicationId = deduplicationId;
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  deduplication_id   5e85484b-1ebc-4141-aab7-25b869e54c49
```

</CodeBlock>

## Add callback parameters {#add-callback-parameters}

<CodeBlock title="Method signature">

```cs
public void AddCallbackParameter(string key, string value);
```

</CodeBlock>

If you [register a callback URL](https://help.adjust.com/en/article/set-up-callbacks) in the Adjust dashboard, the SDK sends a GET request to your callback URL when it records an event.

You can configure callback parameters to send to your servers. Once you configure parameters on an event, the SDK appends them to your [callback URL](https://help.adjust.com/en/article/raw-data-exports). You can use this information to analyze your users' in-app behavior with your BI system.

Add callback parameters to your event by calling the `AddCallbackParameter` method of your `AdjustEvent` instance with `string` key-value arguments. You can add multiple parameters by calling this method multiple times.

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddCallbackParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

The Adjust SDK measures the event and sends a request to your URL with the callback parameters. For example, if you register the URL `https://www.mydomain.com/callback`, your callback looks like this:

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

<Callout type="note">

Adjust doesn't store your custom callback parameters. Custom parameters are only appended to your callback URL.

</Callout>

If you're using CSV uploads, make sure to add the parameters to your CSV definition.

Adjust supports many placeholders which you can use to pass information from the SDK to your URL. For example, the `{idfa}` placeholder for iOS and the `{gps_adid}` placeholder for Android. The `{publisher_parameter}` placeholder presents all callback parameters in a single string.

<Callout type="seealso">

You can read more about using URL callbacks, including a full list of available values, in the [callbacks guide](https://help.adjust.com/en/article/callbacks).

</Callout>

### Example {#example-3}

This example shows how to record an event with the token `g3mfiw`. The following callback parameters are added:

-  The `event_token`
-  The `revenue_amount` generated by the event

The resulting callback URL looks like this:

```http
http://www.mydomain.com/callback?event_token=g3mfiw&revenue_amount=0.05
```

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddCallbackParameter("event_token", "g3mfiw");
adjustEvent.AddCallbackParameter("revenue_amount", "0.05");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  callback_params  {"event_token":"g3mfiw","revenue_amount":"0.05"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw

```

</CodeBlock>

## Add partner parameters {#add-partner-parameters}

<CodeBlock title="Method signature">

```cs
public void AddPartnerParameter(string key, string value);
```

</CodeBlock>

You can send extra information to your network partners by adding [partner parameters](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters).

Adjust sends partner parameters to [external partners](https://help.adjust.com/en/article/integrated-partners) you have set up. This information is useful for more granular analysis and retargeting purposes. Adjust's servers forward these parameters once you have set them up and enabled them for a partner.

<Callout type="note">

Partner parameters don't appear in raw data by default. You can add the `{partner_parameters}` placeholder to receive them as a single string.

</Callout>

Add partner parameters to your event by calling the `AddPartnerParameter` method of your `AdjustEvent` instance with `string` key-value arguments. You can add multiple parameters by calling this method multiple times.

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddPartnerParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

### Example {#example-4}

This example shows how to record an event with the token `g3mfiw`. The following partner parameters are added:

-  The `product_id` of the associated product
-  The `user_id` of the user who triggered the event

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddPartnerParameter("product_id", "29");
adjustEvent.AddPartnerParameter("user_id", "835");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  partner_params  {"product_id":"29","user_id":"835"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock>

## Add a callback identifier {#add-a-callback-identifier}

<CodeBlock title="Property declaration">

```cs
public string CallbackId { get; set; }
```

</CodeBlock>

You can add a custom string identifier to each event to report on [event success and failures](/en/sdk/unity/features/callbacks#event-callbacks). To assign a callback identifier to an event, set the `CallbackId` property of your `AdjustEvent` instance.

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.CallbackId = "{your_callback_id}";
//...
Adjust.TrackEvent(adjustEvent);
```

### Example {#example-5}

This example shows how to record an event with the token `g3mfiw`. In this example, the `CallbackId` is set to `f2e728d8-271b-49ab-80ea-27830a215147`.

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string callbackId = "f2e728d8-271b-49ab-80ea-27830a215147"
adjustEvent.CallbackId = callbackId;
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="Event log" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      g3mfiw
  callback_id      f2e728d8-271b-49ab-80ea-27830a215147
```

</CodeBlock>
